--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "odata-inmemory-connector",
+  "name": "odata-v4-inmemory",
   "version": "0.1.1",
   "description": "Service OData requests from an inmemory data store",
   "main": "lib/index.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jaystack/odata-inmemory-connector.git"
+    "url": "git+https://github.com/jaystack/odata-v4-inmemory.git"
   },
   "keywords": [
     "OData",
@@ -25,9 +25,9 @@
   "author": "JayStack",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jaystack/odata-inmemory-connector/issues"
+    "url": "https://github.com/jaystack/odata-v4-inmemory/issues"
   },
-  "homepage": "https://github.com/jaystack/odata-inmemory-connector#readme",
+  "homepage": "https://github.com/jaystack/odata-v4-inmemory#readme",
   "dependencies": {
     "odata-v4-parser": "^0.1.4"
   },
