Fix property path expression visitor, fix concat method call expression, update odata-v4-parser dependency, update version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "sourceMap": true,
     "target": "es5",
-    "declaration": true
+    "declaration": true,
+    "outDir": "lib"
   },
   "exclude": [
     "node_modules"
